Fixed installing debug protocol error when setupFilePath contains a spaces